--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ApplyTheme</string>
+    <string name="app_name">BirthDayMania</string>
 
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
